--- a/Views/AddEmployeeView.axaml
+++ b/Views/AddEmployeeView.axaml
@@ -1,45 +1,78 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="EmployeeManagementApp.Views.AddEmployeeView">
-	<Grid RowDefinitions="Auto,Auto,Auto" Margin="10">
-		<TextBlock Grid.Row="0"
-                  Text="Add New Employee"
-                  FontSize="20"
-                  FontWeight="Bold"
-                  Margin="0,0,0,20"/>
+	<Grid Margin="10">
+		<!-- Title -->
+		<TextBlock Text="Add New Employee"
+                   FontSize="20"
+                   FontWeight="Bold"
+                   Foreground="White"
+                   Margin="0,0,0,20"
+                   HorizontalAlignment="Center"/>
 
-		<Grid Grid.Row="1"
+		<!-- Input Fields and Button Grid -->
+		<Grid Margin="0,30,0,0"
               ColumnDefinitions="Auto,*"
-              RowDefinitions="Auto,Auto,Auto"
-              Margin="0,0,0,20">
+              RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+			<!-- Name -->
 			<TextBlock Grid.Row="0"
-                      Grid.Column="0"
-                      Text="Name:"
-                      VerticalAlignment="Center"/>
+                       Grid.Column="0"
+                       Text="Name:"
+                       Foreground="White"
+                       VerticalAlignment="Center"/>
 			<TextBox Grid.Row="0"
                      Grid.Column="1"
                      Name="nameTextBox"
                      Margin="10,0,0,10"/>
 
+			<!-- Department -->
 			<TextBlock Grid.Row="1"
-                      Grid.Column="0"
-                      Text="Department:"
-                      VerticalAlignment="Center"/>
+                       Grid.Column="0"
+                       Text="Department:"
+                       Foreground="White"
+                       VerticalAlignment="Center"/>
 			<TextBox Grid.Row="1"
                      Grid.Column="1"
                      Name="departmentTextBox"
                      Margin="10,0,0,10"/>
 
-			<Button Grid.Row="2"
+			<!-- Date of Joining -->
+			<TextBlock Grid.Row="2"
+                       Grid.Column="0"
+                       Text="Date of Joining:"
+                       Foreground="White"
+                       VerticalAlignment="Center"/>
+			<DatePicker Grid.Row="2"
+                        Grid.Column="1"
+                        Name="dateOfJoinPicker"
+                        Margin="10,0,0,10"/>
+
+			<!-- Save Button -->
+			<Button Grid.Row="3"
                     Grid.Column="1"
                     Content="Save Employee"
                     Click="SaveEmployee_Click"
                     Margin="10,10,0,0"
-                    Background="Green"/>
-		</Grid>
+                    Background="Green"
+                    Foreground="White"
+                    HorizontalAlignment="Left"/>
 
-		<TextBlock Grid.Row="2"
-                   Name="messageText"
-                   Margin="0,10,0,0"/>
+			<!-- Message Text (Placed between Save and Home Button) -->
+			<TextBlock Grid.Row="4"
+                       Name="messageText"
+                       Foreground="White"
+                       Margin="0,20,0,0"
+                       HorizontalAlignment="Center"/>
+
+			<!-- Home Button -->
+			<Button Grid.Row="5"
+                    Grid.Column="1"
+                    Content="Home"
+                    Click="BackToMain_Click"
+                    Margin="10,20,0,0"
+                    Background="#FF4444"
+                    Foreground="White"
+                    HorizontalAlignment="Left"/>
+		</Grid>
 	</Grid>
 </UserControl>
