--- a/Views/EditEmployeeView.axaml
+++ b/Views/EditEmployeeView.axaml
@@ -43,6 +43,11 @@
                         Click="Cancel_Click"
                         Background="#FF4444"
 						Cursor="Hand"/>
+				<Button Content="Home"
+                        Click="BackToMain_Click"
+                        Background="#FF4444"
+                        Foreground="White"
+                        Cursor="Hand"/>
 			</StackPanel>
 		</Grid>
 
