--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -4,15 +4,16 @@
         Title="Employee Manager"
         Width="800"
         Height="600"
-        Background="DimGray">
+        Background="#086e75">
 	<!-- Setting the background color of the window to grey -->
-
 	<Grid Margin="20"
           VerticalAlignment="Center"
           HorizontalAlignment="Center">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+			<!-- Row for the copyright section -->
 		</Grid.RowDefinitions>
 
 		<StackPanel Grid.Row="0" Spacing="20" HorizontalAlignment="Center">
@@ -22,7 +23,6 @@
                        Foreground="White"
                        Margin="0,0,0,20"
                        HorizontalAlignment="Center"/>
-			
 
 			<StackPanel Orientation="Horizontal"
                         Spacing="20"
@@ -58,6 +58,23 @@
                                    Foreground="White"/>
 					</StackPanel>
 				</Button>
+
+				<!-- About Button -->
+				<Button Name="aboutButton"
+                        Click="AboutButton_Click"
+                        Background="Green"
+                        Foreground="White"
+                        Cursor="Hand"
+                        Classes="primary"
+                        Width="180"
+                        Height="40">
+					<StackPanel>
+						<TextBlock Text="About"
+                                   HorizontalAlignment="Center"
+                                   FontSize="16"
+                                   Foreground="White"/>
+					</StackPanel>
+				</Button>
 			</StackPanel>
 		</StackPanel>
 
@@ -73,6 +90,16 @@
                        Foreground="White"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
+
 		</ContentControl>
+
+		<!-- Copyright Section -->
+		<TextBlock Grid.Row="2"
+                   Text="© 2024 Muhammed Fariz K P. All rights reserved."
+                   FontStyle="Italic"
+                   Foreground="White"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Margin="0,10,0,0" />
 	</Grid>
 </Window>
